IpaNav: Fix year selector layout bug

--- a/app/shared/directives/ipaHeader/ipaHeader.css
+++ b/app/shared/directives/ipaHeader/ipaHeader.css
@@ -2,11 +2,12 @@
 	border: 1px solid #333;
 	display: flex;
 	align-items: center;
+	justify-content: center;
 	margin: 0px 20px 0px 0px;
 	background-color: white;
 	border-radius: 4px;
 	height: 31px;
-	min-width: 131px;
+	min-width: 140px;
 }
 
 .ipa-header__workgroup-button {
